2009-05-31
	* set default coder name to username of OS.
	* Add number of files in the title of retrieved codings widget and similarly revision of ExportCodings().
	* upgrade database structure to version "0.1.8" (Old version of RQDA does not work with new *.rqda for the attributes). NOTE: add status column to caseAttr and fileAttr tables.

2009-05-30
	* New function of ExportCodings() for exporting codings to a html file.
	* Other minor improvements.

2009-05-29
	* new function of Annotation() and "Add Ann" button.
	* "Hightlight all codings" moved to popup menu.
	* "Highlight codings with memo" popup menu.
	* Merge AttributesWidget.R with Attributes.R, annotation.R with CodesFun.R,GUIHandler.R with root_gui.R
	* Revise HL_Case(),Mark case and Unmark case buttons accordingly.
	* Revise MarkCodeFun() accodingly, so insert code label as mark after data is written to database and delete unused code label too (when new and old code are overlapped).
	
2009-05-28
	* new function of countAnchorsWithFileName(), different way to do things as countAnchors(), faster.

2009-05-27
	* Rewrite retrieval() according to revision of 2009-05-26.

2009-05-26
	* Use Anchor to mark the codings in the File Widget.
	* improvement of AddTo button in code categories Tab.

2009-05-25
	* add an icon for the main programme.

2009-05-22
	* plot code categories.

2009-05-21
	* improve "search file..." menu, to keep the last search pattern.

2009-05-20
	* add some tooltips of buttons in Code Tab.
	* font-setting for memo widget.

2009-05-19
	* Use glabel to display current project rather than a button.
	* Improve EditFileFun to place cursor at the beginning by default.
	* new argument x and y of gselect.list, to specify the position of the dialog widget.

2009-05-18
	* use options(widgetCoordinate=c(400,2)) to adjust the position of ViewFileFun widget etc.

2009-05-17
	* Minor improvement of GUI according to Kevin Brubeck Unhammer (see the mail list for details).

2009-05-12